--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     padding: 2vh;
     display: flex;
     justify-content: space-around;
-    background-color: rgb(7, 7, 33);
+    background-color: #032B43;
     color: white;
 }
 
@@ -59,3 +59,25 @@
 #arr_size:hover , #arr_speed:hover, button:hover {
     cursor: pointer;
 }
+
+.big-cont {
+    /* background-color: rgb(24, 99, 99); */
+    height: 77vh;
+    display: flex;
+    gap:0.1rem;
+}
+
+#visualizer {
+    display: flex;
+    gap:1px;
+    width: 80%;
+    justify-content: center;
+    justify-self: center;
+}
+
+.time, .space {
+    width: 25vw;
+    /* background-color: aqua; */
+    height: 100%;
+}
+
