--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ button:hover {
 
 #visualizer p {
     font-weight: 600;
+    font-size: 1rem;
     text-align: center;
     color: #032B43;
     display: flex;
