--- a/style.css
+++ b/style.css
@@ -75,23 +75,20 @@ button:hover {
 #visualizer {
     display: flex;
     gap:1px;
-    width: 80%;
+    width: 75%;
     justify-content: center;
     justify-self: center;
 }
 
 .time, .space {
-    width: 25vw;
+    width:12.5% ;
     height: 100%;
 }
 
 
-#visualizer p {
+#visualizer div{
     font-weight: 600;
     font-size: 1rem;
     text-align: center;
     color: #032B43;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
 }
