--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ button:hover {
 .big-cont {
     height: 77vh;
     display: flex;
-    gap:0.1rem;
+    gap:1rem;
 }
 
 #visualizer {
@@ -80,15 +80,30 @@ button:hover {
     justify-self: center;
 }
 
-.time, .space {
-    width:15% ;
-    height: 100%;
-}
-
-
 #visualizer div{
     font-weight: 600;
     font-size: 1.15rem;
     text-align: center;
     color: #032B43;
+}
+
+.time, .space {
+    /* width:15% ; */
+    height: 60%;
+    font-weight: 700;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.complexity {
+    width:15% ;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding:0 2vw 0 2vw;
+}
+
+.unseen {
+    visibility: hidden;
 }
